Fix about image

--- a/about.html
+++ b/about.html
@@ -253,7 +253,7 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 									<div class="col-md-7 about-detail text-center">
 										<p>MU•NA nace de la necesidad de evolución hacia una visión personal de todo lo aprendido durante estos años.<br>Después de formarme junto a grandes profesionales (el Ermitaño 1*, la Candela resto 1*, Kena de Luis arevalo (referente internacional de cocina nikkei) K’ORI saint tropez (Francia), Sergi Arola 2*, Albora y A’barra 1*…entre otros) llega el momento de regresar a casa y plasmar lo aprendido, tratando de sacar el mayor partido a los productos de nuestra tierra de manera creativa, con el objetivo principal de hacer disfrutar a todo el que venga a vernos.</p>
 											<div class="chef-detail">
-												<i><img width="150" height="150" src="photos/about.jpg" class="attachment-maxrestaurant_150_150 size-maxrestaurant_150_150" alt="" srcset="photos/about.jpg 150w, photos/about.jpg 79w, photos/about.jpg 86w, photos/about.jpg 84w" sizes="(max-width: 150px) 100vw, 150px" /></i>
+												<i><img width="150" height="150" src="photos/samu.jpg" class="attachment-maxrestaurant_150_150 size-maxrestaurant_150_150" alt="Samuel Naveira" /></i>
 												<span><img width="86" height="86" src="photos/icons/chef-sign.png" class="attachment-maxrestaurant_86_86 size-maxrestaurant_86_86" alt="" srcset="photos/icons/chef-sign.png 86w, photos/icons/chef-sign.png 79w, photos/icons/chef-sign.png 84w" sizes="(max-width: 86px) 100vw, 86px" /></span>
                             				<div class="cnt">
 												<h4>Samuel Naveira</h4>
