--- a/index.html
+++ b/index.html
@@ -386,8 +386,13 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 														<div class="col-md-7 about-detail text-center">
 					  										<p>Muna (deseo) se dice del anhelo de saciar un gusto.<br>En nuestra cocina, plasmamos todo lo aprendido en estos años de viajes de trabajo duro y experiencias... <br>regresamos a casa para tratar con mimo todo lo que nuestra tierra nos brinda dándole una visión personal.<br>Aprovechando los productos estacionales nuestra carta y nuestros menús cambian cada mes...</p>
 															<p>TIENES ANTE TI NUESTRO MAYOR DESEO...<br>hacerte disfrutar, poniendo en tus manos todo nuestro saber hacer y nuestro cariño.</p>
-															<p class="bold">Reserva ahora llamando al (+34) 693 762 370</p>
-															<a href="about.html" title="Read More">Leer más</a>
+															<p class="bold">
+																Reserva ahora
+																<a title="Reserva online" target="_blank" href="https://module.lafourchette.com/es_ES/module/480267-fbba6">online</a>
+																o llamando al (+34) 693 762 370
+															</p>
+															<a href="menu.html">Ver menú</a>
+															<a target="_blank" href="https://module.lafourchette.com/es_ES/module/480267-fbba6">Reservar online</a>
 														</div>
 													</div><!-- Row /- -->
 												</div><!-- Container /- -->
