Update gallery pics

--- a/index.html
+++ b/index.html
@@ -408,36 +408,28 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 													<div class="row"><!-- Row -->
 														<div class="gallery-list gallery-fitrow">
 															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast dinner nonveg">
-																<a class="zoom-in" href="photos/gallery1.jpg">
-																	<img width="511" height="340" src="photos/gallery1-511x340.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
+																<a class="zoom-in" href="photos/new/inside.jpg"><img width="511" height="340" src="photos/new/preview/inside.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
 															</div>
-															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast coffee dinner lunch nonveg">
-																<a class="zoom-in" href="photos/gallery2.jpg">
-																	<img width="511" height="340" src="photos/gallery2-511x340.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
+															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast dinner nonveg">
+																<a class="zoom-in" href="photos/new/ant.jpg"><img width="511" height="340" src="photos/new/preview/ant.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
 															</div>
-															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 dinner lunch">
-																<a class="zoom-in" href="photos/gallery3.jpg">
-																<img width="511" height="340" src="photos/gallery3-511x340.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
+															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast dinner nonveg">
+																<a class="zoom-in" href="photos/new/team.jpg"><img width="511" height="340" src="photos/new/preview/team.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
 															</div>
-															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast dinner lunch">
-																<a class="zoom-in" href="photos/gallery4.jpg">
-																<img width="511" height="340" src="photos/gallery4-511x340.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
+															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast dinner nonveg">
+																<a class="zoom-in" href="photos/new/_CMF9121.jpg"><img width="511" height="340" src="photos/new/preview/_CMF9121.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
 															</div>
-															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 dinner lunch">
-																<a class="zoom-in" href="photos/gallery5.jpg">
-																<img width="511" height="340" src="photos/gallery5-511x340.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
+															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast dinner nonveg">
+																<a class="zoom-in" href="photos/new/_CMF9149.jpg"><img width="511" height="340" src="photos/new/preview/_CMF9149.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
 															</div>
-															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast coffee dinner lunch nonveg">
-																<a class="zoom-in" href="photos/gallery6.jpg">
-																<img width="511" height="340" src="photos/gallery6-511x340.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
+															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast dinner nonveg">
+																<a class="zoom-in" href="photos/new/_CMF9160.jpg"><img width="511" height="340" src="photos/new/preview/_CMF9160.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
 															</div>
-															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast">
-																<a class="zoom-in" href="photos/gallery7.jpg">
-																<img width="511" height="340" src="photos/gallery7-511x340.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
+															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast dinner nonveg">
+																<a class="zoom-in" href="photos/new/_CMF9163.jpg"><img width="511" height="340" src="photos/new/preview/_CMF9163.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
 															</div>
-															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 coffee nonveg">
-																<a class="zoom-in" href="photos/gallery8.jpg">
-																<img width="511" height="340" src="photos/gallery8-511x340.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
+															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast dinner nonveg">
+																<a class="zoom-in" href="photos/new/_CMF9217.jpg"><img width="511" height="340" src="photos/new/preview/_CMF9217.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
 															</div>
 														</div>
 													</div><!-- Row /-->
