--- a/gallery.html
+++ b/gallery.html
@@ -261,10 +261,16 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 													<div class="row"><!-- Row -->
 														<div class="gallery-list gallery-fitrow">
 															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast dinner nonveg">
-																<a class="zoom-in" href="photos/new/_CMF9121.jpg"><img width="511" height="340" src="photos/new/preview/_CMF9121.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
+																<a class="zoom-in" href="photos/new/inside.jpg"><img width="511" height="340" src="photos/new/preview/inside.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
 															</div>
 															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast dinner nonveg">
-																<a class="zoom-in" href="photos/new/_CMF9129.jpg"><img width="511" height="340" src="photos/new/preview/_CMF9129.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
+																<a class="zoom-in" href="photos/new/ant.jpg"><img width="511" height="340" src="photos/new/preview/ant.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
+															</div>
+															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast dinner nonveg">
+																<a class="zoom-in" href="photos/new/team.jpg"><img width="511" height="340" src="photos/new/preview/team.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
+															</div>
+															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast dinner nonveg">
+																<a class="zoom-in" href="photos/new/_CMF9121.jpg"><img width="511" height="340" src="photos/new/preview/_CMF9121.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
 															</div>
 															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast dinner nonveg">
 																<a class="zoom-in" href="photos/new/_CMF9149.jpg"><img width="511" height="340" src="photos/new/preview/_CMF9149.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
@@ -276,10 +282,10 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 																<a class="zoom-in" href="photos/new/_CMF9163.jpg"><img width="511" height="340" src="photos/new/preview/_CMF9163.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
 															</div>
 															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast dinner nonveg">
-																<a class="zoom-in" href="photos/new/_CMF9191.jpg"><img width="511" height="340" src="photos/new/preview/_CMF9191.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
+																<a class="zoom-in" href="photos/new/_CMF9217.jpg"><img width="511" height="340" src="photos/new/preview/_CMF9217.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
 															</div>
 															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast dinner nonveg">
-																<a class="zoom-in" href="photos/new/_CMF9217.jpg"><img width="511" height="340" src="photos/new/preview/_CMF9217.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
+																<a class="zoom-in" href="photos/new/_CMF9191.jpg"><img width="511" height="340" src="photos/new/preview/_CMF9191.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
 															</div>
 															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast dinner nonveg">
 																<a class="zoom-in" href="photos/new/_CMF9247.jpg"><img width="511" height="340" src="photos/new/preview/_CMF9247.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
@@ -289,6 +295,9 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 															</div>
 															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast dinner nonveg">
 																<a class="zoom-in" href="photos/new/_CMF9302.jpg"><img width="511" height="340" src="photos/new/preview/_CMF9302.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
+															</div>
+															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast dinner nonveg">
+																<a class="zoom-in" href="photos/new/_CMF9129.jpg"><img width="511" height="340" src="photos/new/preview/_CMF9129.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
 															</div>
 
 															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast dinner nonveg">
