Group space homepage

--- a/index.html
+++ b/index.html
@@ -437,18 +437,24 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 											</div><!-- Gallery Section /- -->
 <!---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 
-        									<div class="wpb_wrapper">
-											<div class="container-fluid no-left-padding no-right-padding about-section about-section2"><!-- Menú Section -->
-												<div class="container"><!-- Container -->
-													<div class="row"><!-- Row -->
-														<div class="col-md-7 about-detail text-center">
-					  										<p>La mejor manera de conocer nuestra cocina es a través de nuestros menús; disponemos de dos tipos de menús,<br>MENÚ DEGUSTACIÓN y MENÚ EXPERIENCIA, que varian por temporadas para ofrecer lo mejor de nuestros productos.<br><br>El menú se adaptará en la medida de lo posible a los gustos e intolerancias de nuestros clientes<br>para que todos los platos sean siempre de su agrado.</p>
-															<a href="menu.html" title="Ver Menús">Ver Menús</a>
-														</div>
-													</div><!-- Row /- -->
-												</div><!-- Container /- -->
-											</div><!-- Menú Section /- -->
-										</div>
+        					<div class="wpb_wrapper">
+										<div class="container-fluid no-left-padding no-right-padding about-section about-section2"><!-- Menú Section -->
+											<div class="container"><!-- Container -->
+												<div class="row l-groups"><!-- Row -->
+													<img class="col-md-6 l-groups__pic" src="photos/imperial.jpg" alt="Imperial table" />
+													<div class="col-md-5 col-md-push-1 about-detail">
+														<h3>Espacio para grupos</h3>
+														<p>
+															Disponemos de un espacio dedicado para grupos, ideal para cumpleaños, cenas de empresa o eventos.
+															Contacta con nosotros con antelación en el teléfono (+34) 693 762 370 o reserva online.
+														</p>
+														<a href="menu.html" title="Ver Menús">Ver Menú</a>
+														<a target="_blank" href="https://module.lafourchette.com/es_ES/module/480267-fbba6">Reservar online</a>
+													</div>
+												</div><!-- Row /- -->
+											</div><!-- Container /- -->
+										</div><!-- Menú Section /- -->
+									</div>
 
 <!---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 		<footer id="footer-main" class="container-fluid no-left-padding no-right-padding footer-main footer-main-2"><!-- Footer Main -->
