--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 							<a title="Nosotros" href="about.html">Nosotros</a>
 						</li>
 						<li id="menu-item-139" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-139">
-							<a title="Menu" href="menu.html">Menú</a>
+							<a title="Menu" href="https://www.dropbox.com/s/ti666kmcs64e5d1/carta.pdf?raw=1" target="_blank">Carta</a>
 						</li>
 						<li id="menu-item-140" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-140">
 							<a title="Gallery" href="gallery.html">Galería</a>
@@ -391,7 +391,7 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 																<a title="Reserva online" target="_blank" href="https://module.lafourchette.com/es_ES/module/480267-fbba6">online</a>
 																o llamando al (+34) 693 762 370
 															</p>
-															<a href="menu.html">Ver menú</a>
+															<a href="https://www.dropbox.com/s/ti666kmcs64e5d1/carta.pdf?raw=1" target="_blank">Ver Carta</a>
 															<a target="_blank" href="https://module.lafourchette.com/es_ES/module/480267-fbba6">Reservar online</a>
 														</div>
 													</div><!-- Row /- -->
@@ -448,7 +448,7 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 															Disponemos de un espacio dedicado para grupos, ideal para cumpleaños, cenas de empresa o eventos.
 															Contacta con nosotros con antelación en el teléfono (+34) 693 762 370 o reserva online.
 														</p>
-														<a href="menu.html" title="Ver Menús">Ver Menú</a>
+														<a href="https://www.dropbox.com/s/ti666kmcs64e5d1/carta.pdf?raw=1" title="Ver Cartas" target="_blank">Ver Carta</a>
 														<a target="_blank" href="https://module.lafourchette.com/es_ES/module/480267-fbba6">Reservar online</a>
 													</div>
 												</div><!-- Row /- -->
@@ -470,7 +470,7 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 										<ul id="menu-menu-categories" class="menu">
 											<li id="menu-item-355" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-355"><a target="_blank" href="https://module.lafourchette.com/es_ES/module/480267-fbba6">RESERVA ONLINE</a></li>
 											<li id="menu-item-355" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-355"><a href="gallery.html">GALERÍA</a></li>
-											<li id="menu-item-356" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-356"><a href="menu.html">MENÚS</a></li>
+											<li id="menu-item-356" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-356"><a target="_blank" href="https://www.dropbox.com/s/ti666kmcs64e5d1/carta.pdf?raw=1">CARTA</a></li>
 											<li id="menu-item-358" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-358"><a href="shop.html">REGALA MU•NA</a></li>
 										</ul>
 									</div>
