--- a/reservation.html
+++ b/reservation.html
@@ -356,7 +356,7 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 										<ul id="menu-menu-categories" class="menu">
 											<li id="menu-item-355" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-355"><a target="_blank" href="https://module.lafourchette.com/es_ES/module/480267-fbba6">RESERVA ONLINE</a></li>
 											<li id="menu-item-355" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-355"><a href="gallery.html">GALERÍA</a></li>
-											<li id="menu-item-356" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-356"><a href="menu.html">MENÚS</a></li>
+											<li id="menu-item-356" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-356"><a target="_blank" href="https://www.dropbox.com/s/ti666kmcs64e5d1/carta.pdf?raw=1">CARTA</a></li>
 											<li id="menu-item-358" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-358"><a href="shop.html">REGALA MU•NA</a></li>
 										</ul>
 									</div>
