--- a/privacy.html
+++ b/privacy.html
@@ -305,19 +305,53 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 							<aside id="widget-worktime-4" class="widget widget_workingtime">
 								<h3 class="widget-title">HORARIO</h3>
 									<table>
-										<tr>
-											<td>MIÉRCOLES-VIERNES<br>13:30 - 15:30 / 21:30 - 23:30</td>
-										</tr>
-										<tr>
-											<td>SÁBADOS<br>13:30 - 15:30 / 21:30 - 23:30</td>
-										</tr>
-										<tr>
-											<td>DOMINGOS<br>13:00 - 15:00</td>
-										</tr>
-										<tr>
-											<td>FESTIVOS<br>Consultar</td>
-										</tr>
-									</table>
+								<tr>
+									<td>
+										<span class="h-light">INVIERNO (15 Septiembre - 10 Junio)</span>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										COMIDAS<br>
+										Martes a Domingo, 14:00 - 15:30
+									</td>
+								</tr>
+								<tr>
+									<td>
+										CENAS<br>
+										Jueves a Sábado, 21:00 - 23:00
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<br>
+										<span class="h-light">VERANO (10 Junio - 15 Septiembre)</span>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										COMIDAS<br>
+										Martes a Domingo, 14:00 - 15:30
+									</td>
+								</tr>
+								<tr>
+									<td>
+										CENAS<br>
+										Miércoles a Sábado, 21:00 - 23:00
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<br>
+										<div class="h-light">
+											Lunes cerrado<br><br>
+											CIERRE POR VACACIONES<br>
+											14 - 24 Octubre<br>
+											24 - 25 Diciembre
+										</div>
+									</td>
+								</tr>
+							</table>
 							</aside>
 							<aside id="mc4wp_form_widget-3" class="widget widget_mc4wp_form_widget">
 								<script type="text/javascript">(function() {
