Actualizar estilo horario

--- a/privacidad.html
+++ b/privacidad.html
@@ -300,45 +300,53 @@ La dirección de contacto del Delegado de Protección de Datos designado por el 
 									<table>
 								<tr>
 									<td>
-										<span class="h-light">INVIERNO (15 Septiembre - 9 Junio)</span>
+										INVIERNO (15 Septiembre - 9 Junio)
 									</td>
 								</tr>
 								<tr>
 									<td>
-										COMIDAS<br>
-										Martes a Domingo, 14:00 - 15:30
-									</td>
-								</tr>
-								<tr>
-									<td>
-										CENAS<br>
-										Jueves a Sábado, 21:00 - 23:00
-									</td>
-								</tr>
-								<tr>
-									<td>
-										<br>
-										<span class="h-light">VERANO (10 Junio - 14 Septiembre)</span>
-									</td>
-								</tr>
-								<tr>
-									<td>
-										COMIDAS<br>
-										Martes a Domingo, 14:00 - 15:30
-									</td>
-								</tr>
-								<tr>
-									<td>
-										CENAS<br>
-										Miércoles a Sábado, 21:00 - 23:00
-									</td>
-								</tr>
-								<tr>
-									<td>
-										<br>
 										<div class="h-light">
-											Lunes cerrado<br><br>
-											CIERRE POR VACACIONES<br>
+											COMIDAS<br>
+											Martes a Domingo, 14:00 - 15:30
+										</div>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<div class="h-light">
+											CENAS<br>
+											Jueves a Sábado, 21:00 - 23:00
+										</div>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<br>
+										VERANO (10 Junio - 14 Septiembre)
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<div class="h-light">
+											COMIDAS<br>
+											Martes a Domingo, 14:00 - 15:30
+										</div>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<div class="h-light">
+											CENAS<br>
+											Miércoles a Sábado, 21:00 - 23:00
+										</div>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<br>
+										Lunes cerrado<br><br>
+										CIERRE POR VACACIONES<br>
+										<div class="h-light">
 											14 - 24 Octubre<br>
 											24 - 25 Diciembre
 										</div>
